force-app/main/default/objects/DeliveryPackage__c/DeliveryPackage__c.object-meta.xml
<CustomObject>
    <label>Delivery Package</label>
    <nameField>
        <displayFormat>DelPkg-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Packages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>