force-app/main/default/objects/DeliveryPackage__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcelforce</fullName>
                <default>true</default>
                <label>Parcelforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>