force-app/main/default/objects/DeliveryPackage__c/fields/CollectionDepot__c.field-meta.xml
<CustomField>
    <fullName>CollectionDepot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collection Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Collection Packages</relationshipLabel>
    <relationshipName>CollectionPackages</relationshipName>
    <type>Lookup</type>
</CustomField>