force-app/main/default/objects/DeliveryPackage__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>