force-app/main/default/objects/DeliveryPackage__c/fields/DeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveredDate__c</fullName>
    <label>Delivered Date</label>
    <type>DateTime</type>
</CustomField>