force-app/main/default/objects/DeliveryPackage__c/fields/IsDraftStatus__c.field-meta.xml
<CustomField>
    <fullName>IsDraftStatus__c</fullName>
    <formula>CONTAINS(&apos;New, Advised, Labelled, Lock&apos;, TEXT(Status__c))</formula>
    <label>Draft Status?</label>
    <type>Checkbox</type>
</CustomField>