force-app/main/default/objects/DeliveryPackage__c/fields/IsRequestedDeliveryDateSameAsOrder__c.field-meta.xml
<CustomField>
    <fullName>IsRequestedDeliveryDateSameAsOrder__c</fullName>
    <formula>RequestedDeliveryDate__c = Order__r.Requested_Delivery_Date__c</formula>
    <label>Requested Delivery Date Same As Order</label>
    <type>Checkbox</type>
</CustomField>