force-app/main/default/objects/DeliveryPackage__c/fields/IsSaturdayDelivery__c.field-meta.xml
<CustomField>
    <fullName>IsSaturdayDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Delivery</label>
    <type>Checkbox</type>
</CustomField>