force-app/main/default/objects/DeliveryPackage__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>AND(DATEVALUE(CreatedDate) &lt; TODAY() - 60, IsFinalStatus__c)</formula>
    <label>Scheduled For Deletion</label>
    <type>Checkbox</type>
</CustomField>