force-app/main/default/objects/DeliveryPackage__c/fields/ItemCount__c.field-meta.xml
<CustomField>
    <fullName>ItemCount__c</fullName>
    <label>Item Count</label>
    <summaryForeignKey>DeliveryPackageItem__c.DeliveryPackage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>