force-app/main/default/objects/DeliveryPackage__c/fields/ItemCountInProgress__c.field-meta.xml
<CustomField>
    <fullName>ItemCountInProgress__c</fullName>
    <label>Item Count In Progress</label>
    <summaryFilterItems>
        <field>DeliveryPackageItem__c.Event__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DeliveryPackageItem__c.IsFinalStatus__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>DeliveryPackageItem__c.DeliveryPackage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>