force-app/main/default/objects/DeliveryPackage__c/fields/ItemCountReturnedToSender__c.field-meta.xml
<CustomField>
    <fullName>ItemCountReturnedToSender__c</fullName>
    <label>Item Count Returned To Sender</label>
    <summaryFilterItems>
        <field>DeliveryPackageItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Returned To Sender</value>
    </summaryFilterItems>
    <summaryForeignKey>DeliveryPackageItem__c.DeliveryPackage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>