force-app/main/default/objects/DeliveryPackage__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <formula>TEXT(Order__r.Status)</formula>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>