force-app/main/default/objects/DeliveryPackage__c/fields/Packer__c.field-meta.xml
<CustomField>
    <fullName>Packer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packer</label>
    <referenceTo>Packer__c</referenceTo>
    <relationshipLabel>Delivery Packages</relationshipLabel>
    <relationshipName>DeliveryPackages</relationshipName>
    <type>Lookup</type>
</CustomField>