force-app/main/default/objects/DeliveryPackage__c/fields/ParcelforceEvent__c.field-meta.xml
<CustomField>
    <fullName>ParcelforceEvent__c</fullName>
    <label>Parcelforce Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I101</fullName>
                <label>Parcel tracked in</label>
            </value>
            <value>
                <fullName>I102</fullName>
                <label>Parcel delivered</label>
            </value>
            <value>
                <fullName>I103</fullName>
                <label>Received but not advised</label>
            </value>
            <value>
                <fullName>I104</fullName>
                <label>Advised but not received</label>
            </value>
            <value>
                <fullName>I105</fullName>
                <label>Parcel matched to advice</label>
            </value>
            <value>
                <fullName>I106</fullName>
                <label>Advice received too late</label>
            </value>
            <value>
                <fullName>I107</fullName>
                <label>Redirection requested</label>
            </value>
            <value>
                <fullName>I108</fullName>
                <label>Addressee refused</label>
            </value>
            <value>
                <fullName>I109</fullName>
                <label>Addressee will collect</label>
            </value>
            <value>
                <fullName>I110</fullName>
                <label>Redelivery arranged</label>
            </value>
            <value>
                <fullName>I111</fullName>
                <label>Delivery arranged</label>
            </value>
            <value>
                <fullName>I112</fullName>
                <label>Depot cannot find parcel</label>
            </value>
            <value>
                <fullName>I113</fullName>
                <label>Local redirection</label>
            </value>
            <value>
                <fullName>I114</fullName>
                <label>Out for redelivery</label>
            </value>
            <value>
                <fullName>I115</fullName>
                <label>Out for first delivery</label>
            </value>
            <value>
                <fullName>I116</fullName>
                <label>Out for arranged delivery</label>
            </value>
            <value>
                <fullName>I117</fullName>
                <label>Found during stocktake</label>
            </value>
            <value>
                <fullName>I118</fullName>
                <label>Held - no time to deliver</label>
            </value>
            <value>
                <fullName>I119</fullName>
                <label>Held - incorrect address</label>
            </value>
            <value>
                <fullName>I120</fullName>
                <label>Held - gone away</label>
            </value>
            <value>
                <fullName>I121</fullName>
                <label>Held - parcel damaged</label>
            </value>
            <value>
                <fullName>I122</fullName>
                <label>Held - addressee refused</label>
            </value>
            <value>
                <fullName>I123</fullName>
                <label>Held - depot discretion</label>
            </value>
            <value>
                <fullName>I124</fullName>
                <label>Held - scheduled delivery</label>
            </value>
            <value>
                <fullName>I125</fullName>
                <label>Held - addressee request</label>
            </value>
            <value>
                <fullName>I126</fullName>
                <label>Held - attempted COD</label>
            </value>
            <value>
                <fullName>I127</fullName>
                <label>Held - for collection</label>
            </value>
            <value>
                <fullName>I128</fullName>
                <label>Held - attempted delivery</label>
            </value>
            <value>
                <fullName>I129</fullName>
                <label>Parcel relabelled</label>
            </value>
            <value>
                <fullName>I130</fullName>
                <label>Delivery not attempted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>