force-app/main/default/objects/DeliveryPackage__c/fields/RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDeliveryDate__c</fullName>
    <label>Requested Delivery Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>