force-app/main/default/objects/DeliveryPackage__c/fields/RouteName__c.field-meta.xml
<CustomField>
    <fullName>RouteName__c</fullName>
    <formula>Order__r.RouteName__c</formula>
    <label>Route Name</label>
    <type>Text</type>
</CustomField>