force-app/main/default/objects/DeliveryPackage__c/fields/TrackingId__c.field-meta.xml
<CustomField>
    <fullName>TrackingId__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>