force-app/main/default/objects/DeliveryPackage__c/fields/TrackingIds__c.field-meta.xml
<CustomField>
    <fullName>TrackingIds__c</fullName>
    <label>All Tracking Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>