force-app/main/default/objects/DeliveryPackage__c/fields/TrackingLink__c.field-meta.xml
<CustomField>
    <fullName>TrackingLink__c</fullName>
    <formula>HYPERLINK(&apos;https://www.parcelforce.com/track-trace?trackNumber=&apos; +  TrackingId__c, TrackingId__c)</formula>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>