force-app/main/default/objects/DeliveryPackage__c/validationRules/RequireCollectionDepot.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireCollectionDepot</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsCollection__c, ISBLANK(CollectionDepot__c))</errorConditionFormula>
    <errorDisplayField>CollectionDepot__c</errorDisplayField>
    <errorMessage>Collection Depot is required for Collection package.</errorMessage>
</ValidationRule>