force-app/main/default/objects/DeliveryPackage__c/validationRules/RestrictStatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictStatusChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(TrackingId__c)), ISPICKVAL(Status__c, &quot;Retry&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be Retry because Tracking Id is already present.</errorMessage>
</ValidationRule>