force-app/main/default/objects/DeliveryPackage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>IsCollection__c</columns>
    <columns>RequestedDeliveryDate__c</columns>
    <columns>Count__c</columns>
    <columns>TrackingId__c</columns>
    <columns>Status__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>DeliveredDate__c</columns>
    <columns>ParcelforceEvent__c</columns>
    <columns>Message__c</columns>
    <columns>Carrier__c</columns>
    <columns>RouteName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>