force-app/main/default/objects/DeliveryPackage__c/listViews/CreatedToday.listView-meta.xml
<ListView>
    <fullName>CreatedToday</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>IsSaturdayDelivery__c</columns>
    <columns>RequestedDeliveryDate__c</columns>
    <columns>Count__c</columns>
    <columns>TrackingId__c</columns>
    <columns>Status__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>DeliveredDate__c</columns>
    <columns>ParcelforceEvent__c</columns>
    <columns>Message__c</columns>
    <columns>Carrier__c</columns>
    <columns>RouteName__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>