force-app/main/default/objects/DeliveryPackage__c/listViews/InProgress.listView-meta.xml
<ListView>
    <fullName>InProgress</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>RequestedDeliveryDate__c</columns>
    <columns>Count__c</columns>
    <columns>TrackingId__c</columns>
    <columns>Status__c</columns>
    <columns>Carrier__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>RequestedDeliveryDate__c</field>
        <operation>greaterThan</operation>
        <value>7/8/2024</value>
    </filters>
    <label>In progress</label>
</ListView>